cmake_minimum_required(VERSION 3.17)
project(essential_cpp)

set(CMAKE_CXX_STANDARD 11)

add_executable(essential_cpp main.cpp src/chp_1/demo1.cpp src/chp_1/func.h src/chp_1/demo2.cpp src/chp_1/demo3.cpp src/chp_1/demo4.cpp src/chp_2/demo1.cpp src/chp_2/demo1.h src/chp_2/demo_run.cpp src/chp_2/demo_run.h)